[metadata]
name = nirum-jose
version = 0.1.0
description = Nirum HTTP transport with authorization via JOSE for Python
license = MIT license
url = https://github.com/spoqa/nirum-python-jose
bugtrack_url = https://github.com/spoqa/nirum/issues
author = Hong Minhee
author_email = hong.minhee@gmail.com

[options]
packages = find:nirum_jose
python_requires = >=3.6
install_requires =
    nirum >= 0.6.3, < 0.7.0
    python-jose[cryptography] >= 3.0.0, < 4.0.0
